--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home" class="hero">
         <div class="slider">
             <img src="img/7.JPG" alt="Featured photograph" class="active">
-            <img src="img/2.jpg" alt="Featured photograph">
+            <img src="img/2.JPG" alt="Featured photograph">
             <img src="img/8.JPG" alt="Featured photograph">
             <img src="img/9.JPG" alt="Featured photograph">
         </div>
