--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Photo Gallery</h2>
             <div class="gallery-grid">
                 <img src="img/1.JPG" alt="Gallery image 1">
-                <img src="img/13.jpg" alt="Gallery image 2">
+                <img src="img/13.JPG" alt="Gallery image 2">
                 <img src="img/23.JPG" alt="Gallery image 3">
                 <img src="img/3.JPG" alt="Gallery image 4">
                 <img src="img/9.JPG" alt="Gallery image 5">
