--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
                 <img src="img/23.JPG" alt="Gallery image 3">
                 <img src="img/3.JPG" alt="Gallery image 4">
                 <img src="img/9.JPG" alt="Gallery image 5">
-                <img src="img/6.jpg" alt="Gallery image 6">
+                <img src="img/6.JPG" alt="Gallery image 6">
                 <img src="img/7.JPG" alt="Gallery image 7">
                 <img src="img/8.JPG" alt="Gallery image 8">
                 <img src="img/2.JPG" alt="Gallery image 9">
-                <img src="img/10.jpg" alt="Gallery image 10">
+                <img src="img/10.JPG" alt="Gallery image 10">
                 <img src="img/11.JPG" alt="Gallery image 11">
                 <img src="img/12.JPG" alt="Gallery image 12">
                 <img src="img/5.JPG" alt="Gallery image 13">
-                <img src="img/14.jpg" alt="Gallery image 14">
+                <img src="img/14.JPG" alt="Gallery image 14">
                 <img src="img/15.JPG" alt="Gallery image 15">
                 <img src="img/16.JPG" alt="Gallery image 16">
                 <img src="img/17.JPG" alt="Gallery image 17">
-                <img src="img/18.jpg" alt="Gallery image 18">
+                <img src="img/18.JPG" alt="Gallery image 18">
                 <img src="img/19.JPG" alt="Gallery image 19">
                 <img src="img/20.JPG" alt="Gallery image 20">
                 <img src="img/21.JPG" alt="Gallery image 21">
-                <img src="img/22.jpg" alt="Gallery image 22">
+                <img src="img/22.JPG" alt="Gallery image 22">
                 <img src="img/4.JPG" alt="Gallery image 23">
                 <img src="img/24.JPG" alt="Gallery image 24">
             </div>
@@ -76,7 +76,7 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
-                <img src="img/IMG_7209.jpg" alt="Jane Doe" class="profile-image">
+                <img src="img/IMG_7209.JPG" alt="Jane Doe" class="profile-image">
                 <link rel="stylesheet" href="atom.css">
                 <p>Hi, I'm Ategbe Mercy, a passionate photographer with over 10 years of experience. I specialize in
                     portrait, landscape, and event photography. My goal is to capture the essence of every moment and
